--- a/paper/sections/related_work.tex
+++ b/paper/sections/related_work.tex
@@ -2,19 +2,19 @@
 
 Since every rule list is a decision tree and every decision tree can be expressed as an equivalent rule list, the problem we are solving is a version of the ``optimal decision tree'' problem, though regularization changes the nature of the problem (as shown through our bounds). The optimal decision tree problem is computationally hard, though since the late 1990's, there has been research on building optimal decision trees using optimization techniques~\citep{Bennett96optimaldecision,dobkininduction,FarhangfarGZ08}. A particularly interesting paper along these lines is that of \citet{NijssenFromont2010}, who created a ``bottom-up'' way to form optimal decision trees. Their method performs an expensive search step, mining all possible leaves (rather than all possible rules), and uses those leaves to form trees. Their method can lead to memory problems, but it is possible that these memory issues can be mitigated using the theorems in this paper.\footnote{There is no public version of their code for distribution as of this writing.} None of these methods used the tight bounds and data structures of CORELS.
 
-Because the optimal decision tree problem is hard, there are a huge number of algorithms like CART \citep{Breiman84} and C4.5 \citep{Quinlan93} that do not perform exploration of the search space beyond greedy splitting. Similarly, there are decision list and associative classification methods that construct rule lists iteratively in a greedy way
+Because the optimal decision tree problem is hard, there are a huge number of algorithms such as CART \citep{Breiman84} and C4.5 \citep{Quinlan93} that do not perform exploration of the search space beyond greedy splitting. Similarly, there are decision list and associative classification methods that construct rule lists iteratively in a greedy way
 \citep{Rivest87,Liu98,Li01,Yin03,Sokolova03,Marchand05,Vanhoof10,RudinLeMa13}.
 Some exploration of the search space is done by Bayesian decision tree methods~\citep{Dension:1998hl,Chipman:2002hc,Chipman10} and Bayesian rule-based methods \citep{LethamRuMcMa15,YangRuSe16}. The space of trees of a given depth is much larger than the space of
-rule lists of that same level of depth, and the trees within the Bayesian tree algorithms
+rule lists of that same depth, and the trees within the Bayesian tree algorithms
 are grown in a top-down greedy way. Because of this, the authors of the Bayesian tree algorithms noted that their MCMC chains tend to reach only locally optimal solutions. 
 The 1995 RIPPER algorithm \citep{ripper} is similar to the Bayesian tree methods in that it grows, prunes, and then locally optimizes.
-Bayesian rule lists tend to be more successful escaping local minima because of their smaller search space and methods of exploring the search space, which is why we uses lists, but the tightest bounds for the Bayesian lists (namely those of \citet{YangRuSe16} whose work we build from), are not nearly as tight as those of CORELS.
+Bayesian rule lists tend to be more successful escaping local minima because of their smaller search space and methods of exploring the search space, which is why we uses lists, but the tightest bounds for the Bayesian lists (namely those of \citet{YangRuSe16} upon whose work we build), are not nearly as tight as those of CORELS.
 
-Tight bounds, on the other hand, have been developed for the (immense) literature on building disjunctive normal form (DNF) models. A good example of this is the work of \citet{Rijnbeek10}.
+Tight bounds, on the other hand, have been developed for the (immense) literature on building disjunctive normal form (DNF) models, a good example of this is the work of \citet{Rijnbeek10}.
 %which learns DNF's using bounds similar to our equivalent points bound~(\S\ref{sec:identical}) to prune %the search space.
-For models of a given size, since the class of DNF's is a proper subset of decision lists, our framework can be restricted to learn optimal DNF's. The field of DNF learning includes work from the fields of rule learning/induction (e.g., early algorithms \citep{Michalski1969,ClarkNiblett1989,Frank1998}) and associative classification \citep{Vanhoof10}. Most papers in these fields aim to carefully guide the search through the space of models. If we were to place a restriction on our code to learn DNF's, which would require restricting predictions within the list to the positive class only, we could potentially use methods from rule learning and associative classification to help order CORELS' queue, which would in turn help us eliminate parts of the search space faster. 
+For models of a given size, since the class of DNF's is a proper subset of decision lists, our framework can be restricted to learn optimal DNF's. The field of DNF learning includes work from the fields of rule learning/induction (e.g., early algorithms \citep{Michalski1969,ClarkNiblett1989,Frank1998}) and associative classification \citep{Vanhoof10}. Most papers in these fields aim to carefully guide the search through the space of models. If we were to place a restriction on our code to learn DNF's, which would require restricting predictions within the list to the positive class only, we could potentially use methods from rule learning and associative classification to help order CORELS' queue, which would in turn help us eliminate parts of the search space more quickly. 
 
-Some of our bounds, including the minimum support bound (\S\ref{sec:lb-support}, Theorem~\ref{thm:min-capture}), come from \citep{RudinEr15}, who provide flexible mixed-integer programming formulations uses the same objective as we do; MIP solvers in general cannot compete with the speed of CORELS.
+Some of our bounds, including the minimum support bound (\S\ref{sec:lb-support}, Theorem~\ref{thm:min-capture}), come from \citet{RudinEr15}, who provide flexible mixed-integer programming formulations using the same objective as we do; MIP solvers in general cannot compete with the speed of CORELS.
 
 CORELS depends on pre-mined rules, which we obtain in this work via straightforward enumeration.
 The literature on association rule mining is huge, and any method for rule mining could be reasonably substituted.
