Small tweaks for space

--- a/paper/sections/bounds.tex
+++ b/paper/sections/bounds.tex
@@ -1180,10 +1180,13 @@ Propagating this forward gives
 %= 1 + \sum_{k=1}^K \frac{M! (M - k + 1)}{(k - 1)! (M - k + 1)!}
 = 1 + \sum_{k=1}^K \frac{1}{(k - 1)!} \cdot \frac{M!}{(M - k)!}.
 \end{align}
-\end{arxiv}
 \begin{align}
 \TotalRemaining(\RuleSet) \le 1 + \sum_{k=1}^K C(M, k-1) (M - k + 1).
 \end{align}
+\end{arxiv}
+\begin{kdd}
+${\TotalRemaining(\RuleSet) \le 1 + \sum_{k=1}^K C(M, k-1) (M - k + 1)}$.
+\end{kdd}
 \end{proof}
 
 Pruning based on permutation symmetries thus yields significant
