Introduce MIP acronym explicitly

--- a/paper/sections/related_work.tex
+++ b/paper/sections/related_work.tex
@@ -22,7 +22,7 @@ Tight bounds, on the other hand, have been developed for the (immense) literatur
 %which learns DNF's using bounds similar to our equivalent points bound~(\S\ref{sec:identical}) to prune %the search space.
 For models of a given size, since the class of DNF's is a proper subset of decision lists, our framework can be restricted to learn optimal DNF's. The field of DNF learning includes work from the fields of rule learning/induction (e.g., early algorithms \citep{Michalski1969,ClarkNiblett1989,Frank1998}) and associative classification \citep{Vanhoof10}. Most papers in these fields aim to carefully guide the search through the space of models. If we were to place a restriction on our code to learn DNF's, which would require restricting predictions within the list to the positive class only, we could potentially use methods from rule learning and associative classification to help order CORELS' queue, which would in turn help us eliminate parts of the search space more quickly. 
 
-Some of our bounds, including the minimum support bound (\S\ref{sec:lb-support}, Theorem~\ref{thm:min-capture}), come from \citet{RudinEr15}, who provide flexible mixed-integer programming formulations using the same objective as we do; MIP solvers in general cannot compete with the speed of CORELS.
+Some of our bounds, including the minimum support bound (\S\ref{sec:lb-support}, Theorem~\ref{thm:min-capture}), come from \citet{RudinEr15}, who provide flexible mixed-integer programming (MIP) formulations using the same objective as we do; MIP solvers in general cannot compete with the speed of CORELS.
 
 CORELS depends on pre-mined rules, which we obtain here via enumeration.
 The literature on association rule mining is huge, and any method for rule mining could be reasonably substituted.
