Fix broken refs in conclusion

--- a/paper/sections/conclusion.tex
+++ b/paper/sections/conclusion.tex
@@ -46,9 +46,9 @@ ${\P(Y=1 \given \textrm{treatment} =}$ ${\textrm{True}, x)}$ $-$
 ${\P(Y=1 \given \textrm{treatment} =}$ ${\textrm{False}, x)}$.
 %
 Alternative algorithms that estimate conditional differences with interpretable
-rule lists include Causal Falling Rule Lists \citep{WangRu16},
+rule lists include Causal Falling Rule Lists \citep{WangRu15CFRL},
 Cost-Effective Interpretable Treatment Regimes (CITR) \citep{LakkarajuRu17},
-and an approach by \citet{ZhangLaTsDa2015} for constructing
+and an approach by \citet{ZhangEtAl15} for constructing
 interpretable and parsimonious treatment regimes.
 
 In its current form, CORELS is not easy to adapt to similar problems,
