--- a/paper/kdd17.tex
+++ b/paper/kdd17.tex
@@ -36,7 +36,7 @@
 \includecomment{kdd}\excludecomment{arxiv}
 
 \begin{document}
-\title{Learning certifiably optimal rule lists}
+\title{Learning Certifiably Optimal Rule Lists}
 % \titlenote{Produces the permission block, and
 %   copyright information}
 % \subtitle{Extended Abstract}
